--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1289,7 +1289,7 @@ Portfolio
   overflow: hidden;
   list-style-type: none;
   position: relative;
-  background-color: #f2f2f2;
+  background: linear-gradient(105deg, rgb(255, 215, 205) 0%, rgb(247, 206, 255) 100%);
   margin: 5% 22% 0% 10%;
   border-radius: 20%;
   -webkit-border-radius: 20%;
@@ -1303,7 +1303,7 @@ Portfolio
 .h-content .icons img{
   padding: 5px;
   /*Somepadding*/width: 60%;
-  border: solid #000000;
+  border: solid rgb(0, 0, 0, 0.1);
   border-radius: 20%;
   margin:5%;
   display:relative;
